--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "description": "",
   "main": "App.js",
   "proxy": "https://www.swiggy.com",
-
   "scripts": {
     "test": "jest",
     "start": "parcel index.html",
@@ -26,7 +25,7 @@
   },
   "dependencies": {
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.2"
   }
-  
 }
